PP-14728 - Replaced deprecated JsonParser().parse to JsonParser.parseString and deprecated NewCookie.valueOf to new NewCookie